trying to write to MongoDB, but having errors with dependencies and converting to BSON

--- a/database/database.cabal
+++ b/database/database.cabal
@@ -22,6 +22,8 @@ library
                      , wai
                      , warp
                      , mongoDB
+                     , bson-generic
+                     , bson
                      , mtl
   default-language:    Haskell2010
 
