--- a/authentication/authentication.cabal
+++ b/authentication/authentication.cabal
@@ -21,6 +21,7 @@ library
                      , servant-server
                      , wai
                      , warp
+                     , mtl
   default-language:    Haskell2010
 
 executable authentication-exe
