fixing adding to database

--- a/database/database.cabal
+++ b/database/database.cabal
@@ -22,8 +22,8 @@ library
                      , wai
                      , warp
                      , mongoDB
+                     , base
                      , bson-generic
-                     , bson
                      , mtl
   default-language:    Haskell2010
 
