--- a/database/stack.yaml
+++ b/database/stack.yaml
@@ -2,9 +2,8 @@ flags: {}
 extra-package-dbs: []
 packages:
 - '.'
-extra-deps:
-- bson-0.1.7
-- bson-generic-0.0.6
-- compact-string-fix-0.3.2
-- mongoDB-1.2.0
+- location:
+    git: https://github.com/Palmik/bson-generic.git
+    commit: e078def65d0dee1ea7e3205f445e47d5937851f3
+extra-deps: []
 resolver: lts-7.11
